[project]
name = "rand-org-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factory-boy>=3.3.3",
    "faker>=37.0.2",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "polars>=1.25.2",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
